# DocQuill

./: .gitignore  CONTRIBUTING.md  README.md  profile.stats  requirements.txt
docs/: AI_ANALYSIS_JSON_EVALUATION.md  API_GUIDE.md  API_MISSING_FEATURES.md  CLEANUP_SUMMARY.md  CODE_ANALYSIS.md  COMPETITION_ANALYSIS.md  COVERAGE_REPORT.md  DOCX_EXPORT.md  ENGINE_FEATURES_ANALYSIS.md  HTML_WORKFLOW.md  IMPLEMENTATION_REVIEW.md  JSON_EXPORT_COMPARISON.md  MARKET_ANALYSIS.md  MERGER_DOCUMENTATION.md  MERGER_RELATIONSHIPS.md  MIGRATION_CODE.md  MISSING_RENDERER_FEATURES.md  OFFICE_DOCUMENT_REQUIREMENTS.md  PDF_ENGINE_STATUS.md  PDF_IMPROVEMENTS.md  PROJECT_ASSESSMENT.md  PROJECT_EVALUATION.md  PROJECT_OVERVIEW.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  README_PDF_ENGINE.md  REAL_WORLD_PROBLEMS_SOLVED.md  REMAINING_TASKS.md  RENDERER_COMPARISON.md  RENDERING_QUALITY_COMPARISON.md  RUST_MEDIA_MODULE_ANALYSIS.md  RUST_MIGRATION_ANALYSIS.md  RUST_PDF_RENDERER_MIGRATION.md  RUST_RENDERER_ARCHITECTURE.md  RUST_RENDERER_COMPARISON.md  RUST_RENDERER_FEATURE_COMPARISON.md  (+7 more)
pdf_renderer_rust/: .gitignore  BUILD.md  Cargo.toml  README.md  example.py  pyproject.toml
pdf_renderer_rust/src/: block_renderer.rs  canvas.rs  canvas_simple.rs  error.rs  field.rs  font_registry.rs  font_utils.rs  geometry.rs  image_registry.rs  image_utils.rs  json_helpers.rs  justification.rs  lib.rs  markers.rs  overlays.rs  renderer.rs  text_formatting.rs  text_layout.rs  text_utils.rs  types.rs  unicode_utils.rs
rust_pdf_canvas/: Cargo.toml  pyproject.toml
rust_pdf_canvas/src/: lib.rs
(+273 files in other folders)
